# utah-lunabotics-2026

./: .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  Makefile  README.md
.cargo/: config.toml
camera-discovery/: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
copper-rs/: Cargo.toml
copper-rs/components/monitors/cu_consolemon/: Cargo.toml
copper-rs/components/monitors/cu_cursive_consolemon/: Cargo.toml
copper-rs/components/monitors/cu_cursive_consolemon/src/: dag.rs  lib.rs  main_view.rs  monitor.rs  stats.rs  utils.rs
copper-rs/components/payloads/cu_spatial_payloads/src/: lib.rs
copper-rs/components/sinks/cu_iceoryx2_sink/: Cargo.toml
copper-rs/components/sources/cu_gstreamer/src/: cu_gstreamer_impl.rs
copper-rs/components/sources/cu_iceoryx2_src/: Cargo.toml
copper-rs/components/tasks/cu_apriltag/: Cargo.toml
copper-rs/components/tasks/cu_apriltag/src/: lib.rs
copper-rs/core/cu29_runtime/: Cargo.toml
copper-rs/core/cu29_runtime/src/: monitoring.rs
copper-rs/support/docker/: Dockerfile
embedded_common/: Cargo.toml
external-tasks/: Cargo.toml
external-tasks/lunabot-ai2/: Cargo.toml
external-tasks/lunabot-ai2/src/: context.rs  software_stop.rs  teleop.rs
external-tasks/lunabot-ai2/src/teleop/: dig_dump.rs  dig_dump_simple.rs
external-tasks/realsense/: Cargo.toml  build.rs
external-tasks/realsense/src/: main.rs
external-tasks/rerun-ipc/: Cargo.toml
external-tasks/rerun-ipc/src/: lib.rs  task_impl.rs
kiss-icp-rs/: Cargo.toml
kiss-icp-rs/ops/core/src/: matrix.rs
kiss-icp-rs/ops/eigen/: Cargo.toml
lunabase/: Cargo.toml
lunabase/.cargo/: config.toml
lunabot-cu/: .gitignore  Cargo.toml  backtrace.txt  copperconfig.ron
lunabot-cu/apriltag_isometries/: tag1.ron
lunabot-cu/camera_configs/: cam0.ron  camera_template.ron  camera_template_gstreamer.ron  camera_template_v4l.ron
lunabot-cu/src/: logreader.rs  main.rs  rerun_viz.rs  tasks.rs
lunabot-cu/src/common/: lib.rs  mod.rs  point_types.rs  teleop_utils.rs
lunabot-cu/src/comms/: mod.rs  teleop_utils.rs
lunabot-cu/src/tasks/: ai.rs  april_detection_handler.rs  april_detection_logger.rs  auto_camera.rs  auto_gstreamer.rs  gst_auto_camera.rs  gst_to_image.rs  kiss_icp.rs  localizer.rs  mod.rs  udev_monitor.rs  v4l2_auto_camera.rs  v4lstream.rs
lunabot-cu/src/tasks/sinks/: actuator_controller.rs  ai_sink.rs  l2_pointcloud_sink.rs  localizer.rs  mod.rs  wheel_controller.rs
lunabot-cu/src/tasks/sources/: ai_source.rs  l2_imu.rs  l2_pointcloud.rs  lunabase.rs  lunabase_recv.rs  mod.rs  realsense_pointcloud.rs  teleop.rs  udev_monitor.rs
lunabot-cu/src/utils/: utils.rs
misc/: Cargo.toml
misc/camera-discovery/src/: main.rs
misc/iceoryx-types/: Cargo.toml
misc/iceoryx-types/src/: lib.rs
misc/launcher/: Cargo.toml
misc/launcher/src/: lib.rs
misc/rerun-types-wrapper/: Cargo.toml
misc/simple-motion/: Cargo.toml
misc/simple-motion/src/: lib.rs
misc/tasker/: Cargo.toml
misc/tasker/src/: lib.rs  task.rs
misc/thalassic/: Cargo.toml
misc/thalassic/src/: depth2pcl.rs  pcl2height.rs  pcl2obstacle.rs  pcl2sum.rs
robot-layout/: ele.ron  lunabot.ron  sim.ron
unilidar_iceoryx_publisher/: .gitignore  BUILD.bazel  CMakeCache.txt  CMakeLists.txt  Makefile  README_FRAME_ACCUMULATION.md  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-testlogs  bazel-unilidar_iceoryx_publisher  cmake_install.cmake  run_publisher.sh
unilidar_iceoryx_publisher/include/: imu_point_types.hpp  transmission_data.hpp
unilidar_iceoryx_publisher/src/: main.cpp
