[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
bitcode = "0.6.6"
nalgebra = { version = "0.33", features = [
    "serde-serialize",
    "convert-bytemuck",
] }
once_cell = "1.19"
crossbeam = "0.8"
embedded_common = { path = "../embedded_common" }
bincode = { version = "=2.0.1", features = ["derive", "serde"] }
serde = { version = "1", features = ["derive"] }
