[package]
name = "lunabot-cu"
version = "0.1.0"
edition = "2021"
default-run = "lunabot"
build = "build.rs"


# The main executable of your application
[[bin]]
name = "lunabot"
path = "src/main.rs"

# A custom made log reader application for your application.
[[bin]]
name = "lunabot-logreader"
path = "src/logreader.rs"
required-features = ["logreader"]

[features]
default = []
logreader = ["dep:cu29-export"]

[dependencies]

# copper
cu29 = { git = "https://github.com/matthewashton-k/copper-rs.git", package = "cu29", features = ["log-level-info", "log-level-error"] }
bincode = { version = "2.0.1", features = ["derive", "serde"] }
cu29-helpers = { git = "https://github.com/matthewashton-k/copper-rs.git", package = "cu29-helpers" }
cu29-export = { git = "https://github.com/matthewashton-k/copper-rs.git", package = "cu29-export", optional = true }
cu-apriltag = { git = "https://github.com/matthewashton-k/copper-rs.git", package = "cu-apriltag" }
cu_cursive-consolemon = { git = "https://github.com/matthewashton-k/copper-rs.git", package = "cu_cursive_consolemon" }
cu-sensor-payloads = { git = "https://github.com/matthewashton-k/copper-rs.git", package = "cu-sensor-payloads" }
cu-spatial-payloads = { git = "https://github.com/matthewashton-k/copper-rs.git", package = "cu-spatial-payloads", features = ["nalgebra"]}
cu-dynthreshold = { git = "https://github.com/matthewashton-k/copper-rs.git", package = "cu-dynthreshold", features = ["gst"] }
cu29-runtime = { git = "https://github.com/matthewashton-k/copper-rs.git", package = "cu29-runtime", features = ["jemalloc"] }
cu-gstreamer = { git = "https://github.com/matthewashton-k/copper-rs.git", package = "cu-gstreamer", features = ["gst"] }



image = { version = "0.24", default-features = false, features = ["jpeg"] }
crossbeam-channel = "0.5"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
iceoryx2 = { path = "../../iceoryx2/iceoryx2" }
libc = "0.2.173"
nix = "0.30.1"
bytemuck = "1.14"
nalgebra = { version = "0.33", features = [
    "serde-serialize",
    "convert-bytemuck",
] }
kiss-icp-core = {path = "../kiss-icp-rs/core"}
kiss-icp-ops = {path = "../kiss-icp-rs/ops", features = ["openblas"]}
rayon = "1.10"

crossbeam = "0.8"
gstreamer = "0.23.6"
circular-buffer = "1.1.0"
gstreamer-app = "0.23.5"

rerun = { version = "0.23.2", features = ["nasm", "sdk"], default-features = false }
chrono = "0.4.41"

# embedded
embedded_common ={ path = "../embedded_common"}

# RON deserialization at runtime
ron = "0.8"
spin_sleep = "1.3.2"

# misc
simple-motion = { path = "../misc/simple-motion" }
cakap2 = { path = "../misc/cakap2" }
bitcode = "0.6.6"
tasker = { path = "../misc/tasker"}
iceoryx-types = { path = "../misc/iceoryx-types" }
launcher = { path = "../misc/launcher" }

# common 
common = { path = "../common" }

# Linux-only dependencies
[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"
udev = "0.9"

[build-dependencies]
ron = "0.8"
serde = { version = "1", features = ["derive"] }