[package]
name = "lunabot-cu"
version = "0.1.0"
edition = "2021"
default-run = "lunabot"
build = "build.rs"


# The main executable of your application
[[bin]]
name = "lunabot"
path = "src/main.rs"

# A custom made log reader application for your application.
[[bin]]
name = "lunabot-logreader"
path = "src/logreader.rs"
required-features = ["logreader"]

[features]
default = []
logreader = ["dep:cu29-export"]

[dependencies]

# copper
cu29.workspace = true
bincode.workspace = true
cu29-helpers.workspace = true
cu29-export = { git = "https://github.com/matthewashton-k/copper-rs.git", package = "cu29-export", optional = true }
cu-apriltag.workspace = true
cu_cursive-consolemon.workspace = true
cu-consolemon.workspace = true
cu-sensor-payloads.workspace = true
cu-spatial-payloads.workspace = true
cu-dynthreshold.workspace = true
cu29-runtime.workspace = true
cu-gstreamer.workspace = true


image = { version = "0.24", default-features = false, features = ["jpeg"] }
crossbeam-channel = "0.5"
anyhow = "1"
serde.workspace = true
iceoryx2.workspace = true
libc = "0.2.173"
nix = { version = "0.30.1", features = ["time"] }
bytemuck.workspace = true
nalgebra.workspace = true
kiss-icp-core = { path = "../kiss-icp-rs/core" }
kiss-icp-ops = { path = "../kiss-icp-rs/ops", features = ["openblas"] }
rayon = "1.10"

crossbeam.workspace = true
gstreamer = "0.24.0"
circular-buffer = "1.1.0"
gstreamer-app = "0.24.0"

rerun = { version = "0.23.2", features = [
    "nasm",
    "sdk",
], default-features = false }
chrono = "0.4.41"

# Pin unicode-width to 0.2.0 to resolve version conflict between ratatui (requires =0.2.0) and pfetch (allows ^0.2)
unicode-width = "=0.2.0"

# embedded
embedded_common = { path = "../embedded_common" }

# RON deserialization at runtime
ron.workspace = true
spin_sleep = "1.3.2"

# misc
simple-motion = { path = "../misc/simple-motion" }
cakap2 = { path = "../misc/cakap2" }
bitcode = "0.6.6"
tasker = { path = "../misc/tasker" }
iceoryx-types = { path = "../misc/iceoryx-types" }
launcher = { path = "../misc/launcher" }

# common
common = { path = "../common" }

# Linux-only dependencies
[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"
udev = "0.9"

[build-dependencies]
ron.workspace = true
serde.workspace = true
