[workspace]
resolver = "3"
members = ["rerun-types-wrapper", "simple-motion", "cakap2", "tasker"]




[workspace.dependencies]
nalgebra = { version = "0.33", features = [
    "serde-serialize",
    "convert-bytemuck",
] }
serde = { version = "1", features = ["derive"] }
crossbeam = "0.8"
ron = "0.8"
fxhash = "0.2.1"
indexmap = "2.9.0"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12.2"
cu29 = { git = "https://github.com/matthewashton-k/copper-rs.git", package = "cu29", features = ["log-level-info", "log-level-error"] }
