[package]
name = "lunabot-ai2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
common.path = "../../common"
embedded_common = { path = "../../embedded_common" }
indexmap.workspace = true
nalgebra.workspace = true
fxhash.workspace = true
iceoryx2 = { path = "../../../iceoryx2/iceoryx2" }
iceoryx-types = { path = "../../misc/iceoryx-types" }
bincode = { version = "2.0.1", features = ["derive", "serde"] }
