[package]
name = "lunabot-ai2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
common.path = "../../common"
embedded_common = { path = "../../embedded_common" }
indexmap.workspace = true
nalgebra.workspace = true
fxhash.workspace = true
iceoryx2 = "0.6.1"
iceoryx-types = { path = "../../misc/iceoryx-types" }
bincode.workspace = true
