[package]
name = "realsense"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
realsense-rust = "1.2"
iceoryx2 = { workspace = true }
nalgebra = "0.33"
chrono = { version = "0.4", features = ["serde"] }
fxhash = "0.2"
parking_lot = "0.12"

# Dependencies from misc crates
gputter = { path = "../../misc/gputter" }
simple-motion = { path = "../../misc/simple-motion" }
tasker = { path = "../../misc/tasker" }
thalassic = { path = "../../misc/thalassic" }
iceoryx-types = { path = "../../misc/iceoryx-types" }