[package]
name = "realsense"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
realsense-rust = "1.2"
iceoryx2 = { workspace = true }
nalgebra.workspace = true
chrono = { version = "0.4", features = ["serde"] }
fxhash.workspace = true
parking_lot.workspace = true

# Dependencies from misc crates
gputter = { path = "../../misc/gputter" }
simple-motion = { path = "../../misc/simple-motion" }
tasker = { path = "../../misc/tasker" }
thalassic = { path = "../../misc/thalassic" }
iceoryx-types = { path = "../../misc/iceoryx-types" }
